# sc-videos

./: .cookieplone.json  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  repository.toml  towncrier.toml
.github/workflows/: backend.yml  changelog.yml  config.yml  docs.yml  frontend.yml  main.yml  rtd-pr-preview.yml  tmp-docs-build.yml  tmp-docs-publish.yml  tmp-frontend-storybook.yml
backend/: CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.acceptance  LICENSE.md  Makefile  README.md  bobtemplate.cfg  instance.yaml  mx.ini  pyproject.toml
backend/news/: +1.feature  +10.internal  +11.feature  +12.internal  +13.tests  +14.breaking  +15.documentation  +2.feature  +5.internal  +7.documentation  +8.bugfix  +9.feature  +plone-stubs-py312.bugfix  (+11 more)
docs/: .vale.ini  Makefile  README.md  pyproject.toml
docs/docs/: conf.py  glossary.md  index.md  robots.txt
docs/docs/concepts/: architecture.md  blocks-and-widgets.md  index.md  provider-system.md  video-metadata-pipeline.md
docs/docs/how-to-guides/: add-a-video-provider.md  configure-youtube-api.md  contribute.md  customize-player-theme.md  index.md  use-video-block-in-grid.md
docs/docs/reference/: behavior.md  blocks.md  configuration.md  content-type.md  control-panel.md  css-variables.md  index.md  rest-api.md  widgets.md
docs/docs/tutorials/: create-a-video.md  embed-video-in-page.md  index.md  install.md
docs/styles/config/vocabularies/Base/: accept.txt
docs/styles/config/vocabularies/Plone/: accept.txt
frontend/: .eslintrc.js  CHANGELOG.md  Dockerfile  README.md  mrs.developer.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  volto.config.js
news/: +docs.documentation  +readme.documentation  10.feature  11.feature  15.documentation  16.documentation  4.feature  6.feature  8.feature
(+133 files in other folders)
