[project]
name = "sc.videos_docs"
description = "A Plone add-on providing a Video content type that supports external video sources"
keywords = [
    "Video Support for Plone",
    "documentation",
    "Plone",
    "Diátaxis",
]
version="1.0.0"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "../backend/LICENSE.md" }
maintainers = [
    { name = "Simples Consultoria", email = "comercial@simplesconsultoria.com.br" },
]
authors = [
    { name = "Simples Consultoria", email = "comercial@simplesconsultoria.com.br" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[dependency-groups]
dev = [
    "graphviz",
    "sc.videos",
    "linkify-it-py",
    "myst-parser",
    "plone-sphinx-theme>=1.4.1",  # Use the latest stable version or a minimum
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-examples",
    "sphinx-notfound-page",
    "sphinx-reredirects",
    "sphinx-sitemap",
    "sphinx-tippy",
    "sphinxcontrib-httpdomain",
    "sphinxcontrib-httpexample",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-video",
    "sphinxcontrib-youtube",
    "sphinxext-opengraph",
    "vale",
]

[project.urls]
Repository = "https://github.com/simplesconsultoria/sc-videos"
Documentation = "https://simplesconsultoria.github.io/sc-videos"

[tool.uv]
package = false

[tool.uv.sources]
sc-videos = { path = "../backend", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
